# police-mod-szk-mobile

./: CMakeLists.txt  LICENSE  README.md  build.bat  info.txt
PoliceMod/: .build.ps1  AIController.cpp  AIController.h  Android.mk  Audios.cpp  Audios.h  BackupAI.cpp  BackupAI.h  BackupUnits.cpp  BackupUnits.h  BottomMessage.cpp  BottomMessage.h  Chase.cpp  Chase.h  Checkpoint.cpp  Checkpoint.h  CleoFunctions.cpp  CleoFunctions.h  Cleofn old.txt  Criminals.cpp  Criminals.h  Dialogs.cpp  Dialogs.h  Globals.cpp  Globals.h  HeliBackupAI.cpp  HeliBackupAI.h  Log.cpp  Log.h  MapIcons.cpp  MapIcons.h  ModelLoader.cpp  Objectives.cpp  Objectives.h  Ped.cpp  Ped.h  Peds.cpp  Peds.h  PoliceBase.cpp  PoliceBase.h  (+25 more)
PoliceMod/dialog/: DialogManager.cpp  DialogManager.h  Dialogue.h
PoliceMod/inventory/: Inventory.cpp  Inventory.h
cleo/: Menu SZK.fxt  Menu SZK.txt
files/: radio_design 2.pdn  radio_design.pdn
include/: isautils.h  simpleGta.h
src/: AIBackupVehicle.cpp  AIBackupVehicle.h  AIController.cpp  AIController.h  AICop.cpp  AICop.h  AICriminal.cpp  AICriminal.h  AIHelicopterCop.cpp  AIHelicopterCop.h  AIMedic.cpp  AIMedic.h  AIMedic____.txt  AIPed.cpp  AIPed.h  AIVehicle.cpp  AIVehicle.h  ATMSystem.cpp  ATMSystem.h  AudioCollection.cpp  AudioCollection.h  AudioSequence.cpp  AudioSequence.h  AudioVariationGroup.cpp  AudioVariationGroup.h  BackupUnits.cpp  BackupUnits.h  Biqueiras.cpp  Biqueiras.h  BottomMessage.cpp  BottomMessage.h  CNHWindow.cpp  CNHWindow.h  Callouts.cpp  Callouts.h  Chase.cpp  Chase.h  Checkpoint.cpp  Checkpoint.h  CleoFunctions.cpp  (+73 more)
(+90 files in other folders)
